--- a/tsr_lab3_material_2122/5_CBW_FTCL_CLEXT/docker-compose.yml
+++ b/tsr_lab3_material_2122/5_CBW_FTCL_CLEXT/docker-compose.yml
@@ -59,6 +59,8 @@ services:
       - "9999"
     environment:
       - LOGGER_URL=tcp://log:9995
+    ports:
+      - "9998:9998"
   log:
     image: logger
     build: ./logger/
